--- a/portfolio.html
+++ b/portfolio.html
@@ -18,19 +18,19 @@
         <nav class="page-navigation-menu">
           <a href="./index.html" class="logo link">Web<span class="logo-accent">Studio</span></a>
           <ul class="menu-list list">
-              <li class="menu-item">
-                  <a class="menu-link" href="./studio.html" target="_blank" rel="noopener noreferrer">Studio</a>
-              </li>
-              <li class="menu-item">
-                  <a class="menu-link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
-              </li>
-              <li class="menu-item">
-                  <a class="menu-link" href="./contacts.html" target="_blank" rel="noopener noreferrer">Contacts</a>
-              </li>
+            <li class="menu-item">
+                <a class="menu-link  link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="" target="_blank" rel="noopener noreferrer">Contacts</a>
+            </li>
           </ul>
         </nav>
-        <address class="page-contact list">
-          <ul class="contact-list">
+        <address class="page-contact">
+          <ul class="contact-list list">
               <li class="contact-item link">
                   <a class="e-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
