--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       </nav>
       <address class="page-contact">
         <ul class="contact-list list">
-            <li class="contact-item link">
-                <a class="e-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="contact-item">
+                <a class="e-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="contact-item">
-                <a class="tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
       </address>
