--- a/portfolio.html
+++ b/portfolio.html
@@ -19,27 +19,27 @@
           <a href="./index.html" class="logo link">Web<span class="logo-accent">Studio</span></a>
           <ul class="menu-list list">
             <li class="menu-item">
-                <a class="menu-link  link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
+              <a class="menu-link  link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
             </li>
             <li class="menu-item">
-                <a class="menu-link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
+              <a class="menu-link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
             </li>
             <li class="menu-item">
-                <a class="menu-link" href="" target="_blank" rel="noopener noreferrer">Contacts</a>
+              <a class="menu-link" href="" target="_blank" rel="noopener noreferrer">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="page-contact">
           <ul class="contact-list list">
-              <li class="contact-item link">
-                  <a class="e-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <li class="contact-item">
+                  <a class="e-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li class="contact-item">
-                  <a class="tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                  <a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
               </li>
           </ul>
         </address>
-      </header>
+    </header>
     <!-- MAIN -->
     <main>
         <!-- SECTION-1 -->
@@ -66,10 +66,8 @@
                 <li class="cards-product-item">
                     <a class="cards-product-link link" href="">
                         <img class="cards-product-img" src="./images/portfolio/cashless-payment.jpg" alt="cashless-payment" width="360" >
-                        
-                           <h2 class="cards-product-text">Cashless Payment</h2>
-                           <p class="cards-product-descriptions">Marketting</p>
-                        
+                        <h2 class="cards-product-text">Cashless Payment</h2>
+                        <p class="cards-product-descriptions">Marketing</p>
                     </a>
                 </li>
                 <li class="cards-product-item">
@@ -83,7 +81,7 @@
                     <a class="cards-product-link link" href="">
                         <img class="cards-product-img" src="./images/portfolio/taxi-service.jpg" alt="taxi-service" width="360" >
                         <h2 class="cards-product-text">Taxi Service</h2>
-                        <p class="cards-product-descriptions">Marketting</p>
+                        <p class="cards-product-descriptions">Marketing</p>
                     </a>
                 </li>
                 <li class="cards-product-item">
@@ -97,7 +95,7 @@
                     <a class="cards-product-link link" href="">
                         <img class="cards-product-img" src="./images/portfolio/online-courses.jpg" alt="online-courses" width="360" >
                         <h2 class="cards-product-text">Online Courses</h2>
-                        <p class="cards-product-descriptions">Marketting</p>
+                        <p class="cards-product-descriptions">Marketing</p>
                     </a>
                 </li>
                 <li class="cards-product-item">
