--- a/portfolio.html
+++ b/portfolio.html
@@ -16,28 +16,28 @@
     <!-- HEADER -->
     <header id="#top" class="page-header">
         <nav class="page-navigation-menu">
-          <a href="./index.html" class="logo link">Web<span class="logo-accent">Studio</span></a>
-          <ul class="menu-list list">
-            <li class="menu-item">
-              <a class="menu-link  link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
-            </li>
-            <li class="menu-item">
-              <a class="menu-link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
-            </li>
-            <li class="menu-item">
-              <a class="menu-link" href="" target="_blank" rel="noopener noreferrer">Contacts</a>
-            </li>
-          </ul>
+            <a href="./index.html" class="logo link">Web<span class="logo-accent">Studio</span></a>
+            <ul class="menu-list list">
+                <li class="menu-item">
+                    <a class="menu-link link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link link" href="" target="_blank" rel="noopener noreferrer">Contacts</a>
+                </li>
+            </ul>
         </nav>
         <address class="page-contact">
-          <ul class="contact-list list">
-              <li class="contact-item">
-                  <a class="e-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="contact-item">
-                  <a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-              </li>
-          </ul>
+            <ul class="contact-list list">
+                <li class="contact-item">
+                    <a class="force e-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contact-item">
+                    <a class="force tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
         </address>
     </header>
     <!-- MAIN -->
