--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <address class="page-contact">
         <ul class="contact-list list">
             <li class="contact-item">
-                <a class="force e-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="force link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="contact-item">
-                <a class="force tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="force link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
       </address>
