--- a/index.html
+++ b/index.html
@@ -49,29 +49,29 @@
       </section>
       <!-- SECTION-2 -->
       <section class="benefits">
-        <h2 hidden class="benefits-text">Section2</h2>
+        <h2 hidden class="sub-titel benefits-text">Section2</h2>
         <ul class="benefits-option list">
           <li class="benefits-item">
-            <h3 class="subtitel-benefits">Strategy</h3>
-            <p class="description-benefits">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            <h3 class="text-options subtitel-benefits">Strategy</h3>
+            <p class="text-descriptions description-benefits">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
           </li>
           <li class="benefits-item">
-            <h3 class="subtitel-benefits">Punctuality</h3>
-            <p class="description-benefits">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <h3 class="text-options subtitel-benefits">Punctuality</h3>
+            <p class="text-descriptions description-benefits">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
           </li>
           <li class="benefits-item">
-            <h3 class="subtitel-benefits">Diligence</h3>
-            <p class="description-benefits">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <h3 class="text-options subtitel-benefits">Diligence</h3>
+            <p class="text-descriptions description-benefits">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
           </li>
           <li class="benefits-item">
-            <h3 class="subtitel-benefits">Technologies</h3>
-            <p class="description-benefits">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <h3 class="text-options subtitel-benefits">Technologies</h3>
+            <p class="text-descriptions description-benefits">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
         </ul>
       </section>
       <!-- SECTION-3 -->
       <section class="category-product">
-        <h2 class="category-product-text">What are we doing</h2>
+        <h2 class="sub-titel category-product-text">What are we doing</h2>
         <ul class="category-product-list list">
           <li class="category-product-item">
             <img src="./images/mac.jpg" alt="mac" width="360" height="300">
@@ -86,27 +86,27 @@
       </section>
       <!-- SECTION-4 -->
       <section class="card-employee">
-        <h2 class="card-employee-text">Our Team</h2>
+        <h2 class="sub-titel card-employee-text">Our Team</h2>
         <ul class="card-employee-list  list">
           <li class="card-employee-item">
             <img class="card-employee-img" src="./images/mark-guerrero.jpg" alt="product designer" width="264" height="260">
-            <h3 class="card-employee-name">Mark Guerrero</h3>
-            <p class="card-employee-descriptions">Product Designer</p>
+            <h3 class="text-options card-employee-name">Mark Guerrero</h3>
+            <p class="text-descriptions card-employee-descriptions">Product Designer</p>
           </li>
           <li class="card-employee-item">
             <img class="card-employee-img" src="./images/tom-ford.jpg" alt="frontend developer" width="264" height="260">
-            <h3 class="card-employee-name">Tom Ford</h3>
-            <p class="card-employee-descriptions">Frontend Developer</p>
+            <h3 class="text-options card-employee-name">Tom Ford</h3>
+            <p class="text-descriptions card-employee-descriptions">Frontend Developer</p>
           </li>
           <li class="card-employee-item">
             <img class="card-employee-img" src="./images/camila-garcia.jpg" alt="marketing" width="264" height="260">
-            <h3 class="card-employee-name">Camila Garcia</h3>
-            <p class="card-employee-descriptions">Marketing</p>
+            <h3 class="text-options card-employee-name">Camila Garcia</h3>
+            <p class="text-descriptions card-employee-descriptions">Marketing</p>
           </li>
           <li class="card-employee-item">
             <img class="card-employee-img" src="./images/daniel-wilson.jpg" alt="ui designer" width="264" height="260">
-            <h3 class="card-employee-name">Daniel Wilson</h3>
-            <p class="card-employee-descriptions">UI Designer</p>
+            <h3 class="text-options card-employee-name">Daniel Wilson</h3>
+            <p class="text-descriptions card-employee-descriptions">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -114,7 +114,7 @@
     <!-- FOOTER -->
     <footer class="footer-bg">
       <a href="./index.html" class="logo-footer link">Web<span class="logo-accent-footer">Studio</span></a>
-      <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <p class="text-descriptions footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
